--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/post
+spring.datasource.url=jdbc:mysql://localhost:3306/post_blog
 spring.datasource.username=root
 spring.datasource.password=test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
